--- a/pom.xml
+++ b/pom.xml
@@ -19,5 +19,14 @@
         <mcreator.installDir>D:\MCreator</mcreator.installDir>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>net.mcreator</groupId>
+            <artifactId>javassist</artifactId>
+            <version>1.0</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
+
 
 </project>
