1.添加了GradleHelp模块 2.支持版本2023.2

--- a/MCreatorEnd/src/main/resources/enable.properties
+++ b/MCreatorEnd/src/main/resources/enable.properties
@@ -15,4 +15,9 @@ FontFix.fontSizeEdit = false
 FontFix.fontSize = 19
 CNPool = false
 CNPool.forceInnerPool = false
+GradleHelp = false
+GradleHelp.attachGradle = false
+GradleHelp.resetWorkspaceBase = false
+GradleHelp.forgeMirror = https://maven.fastmirror.net/repositories/minecraft
+GradleHelp.distMirror = mirrors.cloud.tencent.com/gradle
 debug = false
